history/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: history
  template:
    metadata:
      labels:
        app: history
    spec:
      containers:
        - name: history
          image: seongjaegreen/templify-history
          ports:
            - containerPort: 8084
          lifecycle:
            preStop:
              exec:
                command:
                  - "/bin/sh"
                  - "-c"
                  - "psql -h $PGHOST -U $PGUSER -d $PGDATABASE -c \"SELECT pg_terminate_backend(pid) FROM pg_stat_activity WHERE state = 'idle' AND client_addr = '$(hostname -i)';\""
