history/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: history-service
  namespace: history
spec:
  selector:
    app: history
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
